Fix z-index bug where skip-link was hidden.

--- a/componentlib/components/02-modules/skip-link/_sass.scss
+++ b/componentlib/components/02-modules/skip-link/_sass.scss
@@ -3,6 +3,7 @@
   position: absolute;
   top: 0; 
   right: 110%; 
+  z-index: 2;
   background: #fff;
   color: #000;
 }
